# rust-spring-knockoff

./: .gitignore  Cargo.toml  README.md  architecture.md  architecture.puml  build_app.sh  build_cli.sh  build_dev.sh  publish.sh  publish_dirty.sh  readme.md  todo.md
authentication_codegen/: Cargo.toml
authentication_codegen/src/: lib.rs
authentication_codegen/src/authentication_gen_item_modifier/: mod.rs
authentication_codegen/src/authentication_gen_token_stream_provider/: mod.rs
build_lib/: Cargo.toml
build_lib/src/: lib.rs
codegen_utils/: Cargo.toml
codegen_utils/src/: lib.rs
codegen_utils/src/env/: mod.rs
codegen_utils/src/io_utils/: mod.rs
codegen_utils/src/parse/: mod.rs
codegen_utils/src/syn_helper/: mod.rs  test.rs
codegen_utils/src/walk/: mod.rs  test.rs
configuration_properties_macro/: Cargo.toml
configuration_properties_macro/src/: lib.rs
crate_gen/: Cargo.toml
crate_gen/src/: lib.rs
crate_gen/src/crate_writer/: mod.rs
crate_gen/src/lib_writer/: mod.rs
crate_gen/src/test/: mod.rs
crate_gen/src/toml_writer/: cargo_options.rs  mod.rs
crate_gen/test_resources/first/: Cargo.toml
crate_gen/test_resources/second/: Cargo.toml
delegator_macro/: Cargo.toml  abstract_iterator.md  module_macro.md
delegator_macro/src/: lib.rs
delegator_test/: Cargo.toml  build.rs
delegator_test/.cargo/: config.toml
delegator_test/src/: lib.rs  log.txt
delegator_test/src/test_library/: test_library_three.rs  test_library_two.rs
dfactory_dcodegen/: Cargo.toml  build.rs
dfactory_dcodegen/src/: lib.rs
dfactory_dcodegen_codegen/: Cargo.toml  build.rs
dfactory_dcodegen_lib/: Cargo.toml
dfactory_dcodegen_lib/src/: lib.rs
err/: Cargo.toml
err/src/: lib.rs
factories_codegen/: .gitignore  Cargo.toml
factories_codegen/resources/: design.md
factories_codegen/src/: lib.rs
factories_codegen/src/bean_type_providers/: mod.rs
factories_codegen/src/factories_booter/: mod.rs
factories_codegen/src/factories_parser/: factories.rs  mod.rs  providers.rs
factories_codegen/src/framework_token_provider/: mod.rs
factories_codegen/src/item_modifier/: mod.rs
factories_codegen/src/logger/: mod.rs
factories_codegen/src/mutable_module_modifier_provider/: mod.rs
factories_codegen/src/parse_container_modifier/: mod.rs
factories_codegen/src/parse_provider/: mod.rs
factories_codegen/src/profile_tree_finalizer/: mod.rs
factories_codegen/src/profile_tree_modifier/: mod.rs
factories_codegen/src/provider/: mod.rs
factories_codegen/src/test/: mod.rs  test_token_providers.rs
factories_codegen/src/token_provider/: mod.rs
factories_codegen/test_resources/: knockoff_factories.toml
factories_codegen/test_resources/knockoff_delegator_factories/: Cargo.toml
handler_mapping/: Cargo.toml
handler_mapping/src/: lib.rs
hyper/: Cargo.toml
hyper/src/: lib.rs
knockoff_cli/: Cargo.toml
knockoff_cli/src/: main.rs
knockoff_cli/src/args_parser/: mod.rs
knockoff_cli/src/parse_args/: mod.rs
knockoff_cli/src/test/: mod.rs
knockoff_env/: Cargo.toml
knockoff_env/src/: lib.rs
knockoff_env/src/environment/: mod.rs
knockoff_env/src/profile_priority/: mod.rs
knockoff_env/src/profiles_parser/: mod.rs
knockoff_env/src/property_source/: mod.rs
knockoff_env/src/property_source_parser/: mod.rs
knockoff_helper/: Cargo.toml
knockoff_helper/src/: lib.rs
knockoff_logging/: Cargo.toml
knockoff_logging/resources/: log.txt
knockoff_logging/src/: lib.rs
knockoff_logging/src/default_logging/: mod.rs
knockoff_logging/src/log_format/: mod.rs
knockoff_logging/src/log_level/: mod.rs
knockoff_logging/src/logger/: mod.rs
knockoff_logging/src/logging_facade/: mod.rs
knockoff_logging/src/logging_macro/: mod.rs
knockoff_logging/src/print_logging/: mod.rs
knockoff_logging/src/standard_formatter/: mod.rs
knockoff_logging/src/text_file_logging/: mod.rs
knockoff_security/: Cargo.toml
knockoff_security/src/: lib.rs
module_macro/: Cargo.toml  module_macro.md
module_macro/src/: lib.rs
module_macro_codegen/: Cargo.toml  build.rs
module_macro_codegen/src/: lib.rs
module_macro_codegen/src/aspect/: mod.rs
module_macro_codegen/src/authentication_type/: mod.rs
module_macro_codegen/src/codegen_item_macros/: mod.rs
module_macro_codegen/src/field_aug/: mod.rs
module_macro_codegen/src/initializer/: mod.rs
module_macro_codegen/src/logger/: mod.rs
module_macro_codegen/src/module_extractor/: mod.rs
module_macro_codegen/src/parser/: mod.rs
module_macro_codegen/src/test/: mod.rs  test_aspect.rs  test_write_multiple.rs
module_macro_codegen/src/test_module_macro_codegen/: mod.rs
module_macro_codegen/src/token_provider/: factories_parser.rs  mod.rs
module_macro_codegen/test_resources/: test_knockoff_factories.toml_
module_macro_lib/: Cargo.toml  build.rs
module_macro_lib/resources/: default_aug.rs  test_library_three.rs
module_macro_lib/src/: lib.rs
module_macro_lib/test_resources/: spring-knockoff-profiles.rs  spring-knockoff.rs
module_macro_shared/: Cargo.toml
module_macro_shared/src/: lib.rs
module_macro_shared/src/aspect/: mod.rs  test.rs
module_macro_shared/src/bean/: mod.rs
module_macro_shared/src/bean_parser/: bean_dependency_path_parser.rs  mod.rs
module_macro_shared/src/debug/: mod.rs
module_macro_shared/src/dependency/: mod.rs
module_macro_shared/src/functions/: mod.rs
module_macro_shared/src/generics/: mod.rs
module_macro_shared/src/item_modifier/: mod.rs
module_macro_shared/src/item_parser/: item_enum_parser.rs  item_fn_parser.rs  item_impl_parser.rs  item_mod_parser.rs  item_struct_parser.rs  item_trait_parser.rs  (+1 more)
module_precompile/: Cargo.toml
module_precompile/src/: lib.rs
module_precompile_macro/: Cargo.toml
module_precompile_macro/src/: lib.rs
module_precompile_shared/: Cargo.toml
module_precompile_shared/src/: lib.rs
mongo_repo/: Cargo.toml
mongo_repo/src/: lib.rs
program_parser/: Cargo.toml
program_parser/.cargo/: knockoff.toml
program_parser/src/: lib.rs
properties/: Cargo.toml
properties/.cargo/: knockoff.toml
properties/src/: lib.rs
(+261 files in other folders)
