[workspace]
members = [
    "web_framework",
    "build_lib",
    "http_macro",
    "mongo_repo",
    "module_macro_lib",
    "data_framework",
    "module_macro",
    "delegator_test",
    "hyper",
    "test_app",
    "knockoff_logging",
    "rust_spring_macro",
    "wait_for",
    "module_macro_codegen",
    "module_macro_shared",
    "spring_knockoff_boot",
    "knockoff_security",
    "web_framework_shared"
]
