[workspace]
members = [
    "web_framework",
    "build_lib",
    "http_macro",
    "mongo_repo",
    "module_macro_lib",
    "data_framework",
    "module_macro",
    "delegator_test",
    "hyper",
    "knockoff_logging",
    "wait_for",
    "module_macro_codegen",
    "module_macro_shared",
    "spring_knockoff_boot",
    "knockoff_security",
    "web_framework_shared",
    "spring_knockoff_boot_macro",
    "codegen_utils",
    "handler_mapping",
    "factories_codegen",
    "authentication_gen",
    "crate_gen",
    "security_parse_provider",
    "knockoff_cli",
    "aspect_knockoff_provider",
    "collection_util",
    "knockoff_tokio_util",
    "knockoff_env",
    "rust_spring_knockoff",
    "string_utils",
    "set_enum_fields",
    "authentication_codegen",
    "module_precompile_codegen",
    "module_precompile"
#    "boot_application_builder"
]
exclude = [
    "target/knockoff_providers_gen",
    "target/knockoff_providers_genone",
    "target/knockoff_precompile_gen",
    "authentication_gen"
]