[workspace]
members = [
    "web_framework",
    "http_macro",
    "mongo_repo",
    "module_macro_lib",
    "data_framework",
    "module_macro",
    "delegator_test",
    "hyper",
    "knockoff_logging",
    "wait_for",
    "module_macro_codegen",
    "module_macro_shared",
    "spring_knockoff_boot",
    "knockoff_security",
    "web_framework_shared",
    "spring_knockoff_boot_macro",
    "codegen_utils",
    "handler_mapping",
    "factories_codegen",
    "authentication_gen",
    "crate_gen",
    "security_parse_provider",
    "aspect_knockoff_provider",
    "boot_knockoff_gen",
    "boot_knockoff_codegen",
    "collection_util",
    "knockoff_tokio_util",
    "knockoff_helper",
    "rust_spring_knockoff",
    "string_utils",
    "set_enum_fields",
    "authentication_codegen",
#    "module_precompile_codegen",
    "module_precompile",
    "knockoff_env",
    "configuration_properties_macro",
    "knockoff_resource",
    "aspect_knockoff_gen",
    "module_precompile_lib",
    "module_precompile_shared",
    "module_precompile_macro",
    "program_parser",
    "optional",
    "properties",
    "dfactory_dcodegen",
    "cargo_utils",
    "err",
#    "dfactory_dcodegen_codegen",
    "dfactory_dcodegen_lib",
    "dfactory_dcodegen_shared", "boot_knockoff_gen", "boot_knockoff_codegen",
#    "boot_application_builder"
]
exclude = [
    "dfactory_dcodegen_codegen",
    "module_precompile_codegen",
    "target/knockoff_providers_gen",
    "target/knockoff_providers_genone",
    "target/knockoff_precompile_gen",
    "target/knockoff_dfactory_gen",
    "target/knockoff_precompile_builder",
    "target/knockoff_builder",
    "authentication_gen",
    "knockoff_cli"
]
