[package]
name = "build_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
derive-syn-parse = "0.1.5"
syn = {version = "1.0", features = ["full"]}
quote = "1.0"
dynpath = "0.1.4"

[build-dependencies]
syn = {version = "1.0", features = ["full"]}
