[package]
name = "build_lib"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
radix_trie = "0.2.1"
derive-syn-parse = "0.1.5"
syn = {version = "1.0", features = ["full"]}
quote = "1.0"
dynpath = "0.1.4"
lazy_static = "1.4.0"
executors = "0.9.0"

[build-dependencies]
syn = {version = "1.0", features = ["full"]}
lazy_static = "1.4.0"
executors = "0.9.0"
[dependencies.knockoff_logging]
path = "../knockoff_logging"
version = "0.1.5"
registry = "estuary"
[dependencies.codegen_utils]
path = "../codegen_utils"
version = "0.1.5"
registry = "estuary"

