[package]
name = "codegen_utils"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0", features = ["full"]}
lazy_static = "1.4.0"
radix_trie = "0.2.1"
[dependencies.knockoff_env]
version =  "0.1.5"
registry = "estuary"
path = "../knockoff_env"
[dependencies.knockoff_logging]
path = "../knockoff_logging"
version = "0.1.5"
registry = "estuary"
