[package]
name = "delegator_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
lazy_static = "1.4.0"
serde = "1.0.137"
base64 = "0.13.0"

[dependencies.delegator_macro_rules]
path = "../delegator_macro_rules"

[lib]
proc-macro = true