[package]
name = "delegator_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
derive-syn-parse = "0.1.5"
syn = {version = "1.0", features = ["full"]}
quote = "1.0"
dynpath = "0.1.4"

[dependencies.module_macro]
path = "../module_macro"
[dependencies.build_lib]
path = "../build_lib"
[dependencies.module_macro_shared]
path = "../module_macro_shared"

[build-dependencies.build_lib]
path = "../build_lib"
[build-dependencies.module_macro_codegen]
path = "../module_macro_codegen"
[build-dependencies.module_macro_shared]
path = "../module_macro_shared"

[build-dependencies]
syn = {version = "1.0", features = ["full"]}

[env]
AUG_FILE = {value = "/Users/hayde/IdeaProjects/rust-spring-knockoff/delegator_test/src/lib.rs" }
