[package]
name = "delegator_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
derive-syn-parse = "0.1.5"
syn = {version = "1.0", features = ["full"]}
quote = "1.0"
dynpath = "0.1.4"
paste = "1.0.12"

[dependencies.module_macro]
path = "../module_macro"
[dependencies.module_macro_lib]
path = "../module_macro_lib"
[dependencies.module_macro_shared]
path = "../module_macro_shared"
[dependencies.spring_knockoff_boot_macro]
path = "../spring_knockoff_boot_macro"

[build-dependencies.spring_knockoff_boot_macro]
path = "../spring_knockoff_boot_macro"
[build-dependencies.build_lib]
path = "../build_lib"
[build-dependencies.module_macro_codegen]
path = "../module_macro_codegen"
[build-dependencies.module_macro_shared]
path = "../module_macro_shared"
[build-dependencies.module_macro_lib]
path = "../module_macro_lib"
[build-dependencies.codegen_utils]
path = "../codegen_utils"

[build-dependencies]
syn = {version = "1.0", features = ["full"]}
paste = "1.0.12"


[env]
KNOCKOFF_FACTORIES = {value = "/Users/hayde/IdeaProjects/rust-spring-knockoff/delegator_test/src/lib.rs" }
