[package]
name = "delegator_test"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
derive-syn-parse = "0.1.5"
syn = {version = "1.0", features = ["full"]}
quote = "1.0"
dynpath = "0.1.4"
paste = "1.0.12"
proc-macro2 = "1.0.52"
serde = "1.0.137"

[dependencies.module_macro]
path ="../module_macro"
version = "0.1.5"
registry = "estuary"
[dependencies.module_precompile_macro]
path ="../module_precompile_macro"
version = "0.1.5"
registry = "estuary"
[dependencies.configuration_properties_macro]
path ="../configuration_properties_macro"
version = "0.1.5"
registry = "estuary"
[dependencies.module_macro_lib]
path ="../module_macro_lib"
version = "0.1.5"
registry = "estuary"
[dependencies.module_macro_shared]
path ="../module_macro_shared"
version = "0.1.5"
registry = "estuary"
[dependencies.spring_knockoff_boot_macro]
path ="../spring_knockoff_boot_macro"
version = "0.1.5"
registry = "estuary"
[dependencies.web_framework]
path ="../web_framework"
version = "0.1.5"
registry = "estuary"
[dependencies.web_framework_shared]
path ="../web_framework_shared"
version = "0.1.5"
registry = "estuary"
[dependencies.knockoff_security]
path ="../knockoff_security"
version = "0.1.5"
registry = "estuary"

[build-dependencies.crate_gen]
path ="../crate_gen"
version = "0.1.5"
registry = "estuary"
[build-dependencies.web_framework]
path ="../web_framework"
version = "0.1.5"
registry = "estuary"
[build-dependencies.spring_knockoff_boot_macro]
path ="../spring_knockoff_boot_macro"
version = "0.1.5"
registry = "estuary"
[build-dependencies.module_macro_codegen]
path ="../module_macro_codegen"
version = "0.1.5"
registry = "estuary"
[build-dependencies.module_macro_shared]
path = "../module_macro_shared"
version = "0.1.5"
registry = "estuary"
[build-dependencies.module_macro_lib]
version = "0.1.5"
registry = "estuary"
path = "../module_macro_lib"
[build-dependencies.codegen_utils]
version = "0.1.5"
registry = "estuary"
path = "../codegen_utils"

[build-dependencies]
syn = {version = "1.0", features = ["full"]}
paste = "1.0.12"
