[package]
name = "dfactory_dcodegen"
version = "0.1.5"
edition = "2021"
description = "Generates factories generators"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
syn = "2.0.66"
toml = "0.8.14"
lazy_static = "1.4.0"
proc-macro2 = "1.0.85"
