[package]
name = "handler_mapping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
async-std = "1.11.0"
serde_json = "1.0.87"
serde = { version = "1.0", features = ["derive"] }
derive-syn-parse = "0.1.5"
lazy_static = "1.4.0"
executors = "0.9.0"

[dependencies.module_macro_shared]
path = "../module_macro_shared"
[dependencies.knockoff_logging]
path = "../knockoff_logging"
[dependencies.web_framework_shared]
path = "../web_framework_shared"
[dependencies.codegen_utils]
path = "../codegen_utils"