[package]
name = "knockoff_cli"
version = "0.1.4"
edition = "2021"
description = "cargo tool that will build module macro lib with factories."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.69.0"
url = "2.3.1"
toml = "0.7.3"
[dependencies.codegen_utils]
version = "0.1.4"
registry = "estuary"
path = "../codegen_utils"
