[package]
name = "knockoff_env"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0", features = ["full"]}
async-std = "1.11.0"
serde_json = "1.0.87"
serde = { version = "1.0", features = ["derive"] }
proc-macro2 = "1.0.52"
derive-syn-parse = "0.1.5"
circular = "0.3.0"
http = "0.2.9"
http-serde = "1.1.3"
enum-fields = "0.1.0"
toml = "0.8.6"
lazy_static = "1.4.0"


[dependencies.knockoff_resource]
path ="../knockoff_resource"
registry = "estuary"
version = "0.1.5"
[dependencies.knockoff_logging]
path ="../knockoff_logging"
registry = "estuary"
version = "0.1.5"
[dependencies.knockoff_helper]
path ="../knockoff_helper"
registry = "estuary"
version = "0.1.5"
[dependencies.codegen_utils]
path ="../codegen_utils"
registry = "estuary"
version = "0.1.5"
[dependencies.web_framework_shared]
path ="../web_framework_shared"
registry = "estuary"
version = "0.1.5"
