[package]
name = "knockoff_logging"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
executors = "0.9.0"

[dependencies.wait_for]
path = "../wait_for"
version = "0.1.4"
registry = "estuary"
[dependencies.codegen_utils]
version = "0.1.4"
path = "../codegen_utils"
registry = "estuary"
