[package]
name = "module_macro"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
derive-syn-parse = "0.1.5"
lazy_static = "1.4.0"
serde = "1.0.137"
base64 = "0.13.0"
executors = "0.9.0"

[dependencies.module_macro_shared]
path ="../module_macro_shared"
version = "0.1.5"
registry = "estuary"
[dependencies.module_macro_lib]
path ="../module_macro_lib"
registry = "estuary"
version = "0.1.5"
[dependencies.build_lib]
path ="../build_lib"
registry = "estuary"
version = "0.1.5"

[lib]
proc-macro = true