[package]
name = "module_macro_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
derive-syn-parse = "0.1.5"
lazy_static = "1.4.0"
serde = "1.0.137"
base64 = "0.13.0"
executors = "0.9.0"

[dependencies.knockoff_security]
path = "../knockoff_security"
[dependencies.knockoff_logging]
path = "../knockoff_logging"
[dependencies.web_framework_shared]
path = "../web_framework_shared"

[build-dependencies.knockoff_security]
path = "../knockoff_security"
[build-dependencies.web_framework_shared]
path = "../web_framework_shared"
