[package]
name = "module_macro_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
derive-syn-parse = "0.1.5"
lazy_static = "1.4.0"
serde = "1.0.137"
base64 = "0.21.0"
executors = "0.9.0"
rand = "0.8.5"
toml = "0.7.3"

[build-dependencies]
lazy_static = "1.4.0"
executors = "0.9.0"

[dependencies.knockoff_security]
path = "../knockoff_security"
[dependencies.knockoff_logging]
path = "../knockoff_logging"
[dependencies.web_framework_shared]
path = "../web_framework_shared"
[dependencies.spring_knockoff_boot_macro]
path = "../spring_knockoff_boot_macro"
[dependencies.codegen_utils]
path = "../codegen_utils"

[build-dependencies.knockoff_logging]
path = "../knockoff_logging"
[build-dependencies.spring_knockoff_boot_macro]
path = "../spring_knockoff_boot_macro"
[build-dependencies.knockoff_security]
path = "../knockoff_security"
[build-dependencies.web_framework_shared]
path = "../web_framework_shared"
[build-dependencies.codegen_utils]
path = "../codegen_utils"
[build-dependencies.factories_codegen]
path = "../factories_codegen"