[package]
name = "module_macro_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
derive-syn-parse = "0.1.5"
lazy_static = "1.4.0"
serde = "1.0.137"
base64 = "0.13.0"

[build-dependencies.build_lib]
path = "../build_lib"
[dependencies.module_macro_shared]
path = "../module_macro_shared"
[build-dependencies.module_macro_codegen]
path = "../module_macro_codegen"
[build-dependencies.module_macro_shared]
path = "../module_macro_shared"

[build-dependencies]
syn = {version = "1.0", features = ["full"]}
