[package]
name = "module_macro_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
derive-syn-parse = "0.1.5"
lazy_static = "1.4.0"
serde = "1.0.137"
base64 = "0.13.0"
executors = "0.9.0"
paste = "1.0.12"
rand = "0.8.5"
#knockoff_providers_gen = { path = "../target/knockoff_providers_gen" }

[build-dependencies.build_lib]
path = "../build_lib"
[dependencies.module_macro_shared]
path = "../module_macro_shared"
[dependencies.knockoff_logging]
path = "../knockoff_logging"
[dependencies.web_framework_shared]
path = "../web_framework_shared"
[dependencies.knockoff_security]
path = "../knockoff_security"
[dependencies.spring_knockoff_boot_macro]
path = "../spring_knockoff_boot_macro"
[dependencies.module_macro_codegen]
path = "../module_macro_codegen"
[dependencies.codegen_utils]
path = "../codegen_utils"


[build-dependencies.crate_gen]
path = "../crate_gen"
[build-dependencies.codegen_utils]
path = "../codegen_utils"
[build-dependencies.knockoff_logging]
path = "../knockoff_logging"
[build-dependencies.spring_knockoff_boot_macro]
path = "../spring_knockoff_boot_macro"
[build-dependencies.knockoff_security]
path = "../knockoff_security"
[build-dependencies.module_macro_codegen]
path = "../module_macro_codegen"
[build-dependencies.module_macro_shared]
path = "../module_macro_shared"
[build-dependencies.web_framework_shared]
path = "../web_framework_shared"

[build-dependencies]
rand = "0.8.5"
syn = {version = "1.0", features = ["full"]}
executors = "0.9.0"
lazy_static = "1.4.0"
paste = "1.0.12"

