[package]
name = "module_macro_shared"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
derive-syn-parse = "0.1.5"
lazy_static = "1.4.0"
serde = "1.0.137"
base64 = "0.13.0"
executors = "0.9.0"
enum-fields = "0.1.0"
paste = "1.0.12"


[dependencies.collection_util]
path = "../collection_util"
version = "0.1.5"
registry = "estuary"
[dependencies.string_utils]
path = "../string_utils"
version = "0.1.5"
registry = "estuary"
[dependencies.program_parser]
path = "../program_parser"
version = "0.1.5"
registry = "estuary"
[dependencies.set_enum_fields]
path ="../set_enum_fields"
version = "0.1.5"
registry = "estuary"
[dependencies.codegen_utils]
path ="../codegen_utils"
version = "0.1.5"
registry = "estuary"
[dependencies.module_macro_codegen]
path ="../module_macro_codegen"
version = "0.1.5"
registry = "estuary"
[dependencies.knockoff_logging]
path ="../knockoff_logging"
version = "0.1.5"
registry = "estuary"
