[package]
name = "module_precompile"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
derive-syn-parse = "0.1.5"
lazy_static = "1.4.0"
serde = "1.0.137"
base64 = "0.13.0"
executors = "0.9.0"
toml = "0.7.3"
paste = "1.0.12"
rand = "0.8.5"
[dependencies.module_macro_shared]
path ="../module_macro_shared"
version = "0.1.5"
registry = "estuary"
[dependencies.codegen_utils]
path ="../codegen_utils"
version = "0.1.5"
registry = "estuary"
[dependencies.knockoff_env]
path ="../knockoff_env"
version = "0.1.5"
registry = "estuary"
[dependencies.knockoff_logging]
path ="../knockoff_logging"
version = "0.1.5"
registry = "estuary"
[dependencies.knockoff_precompile_gen]
path ="../target/knockoff_precompile_gen"
version = "0.1.5"
registry = "estuary"
